--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:react-hooks/recommended"
-    ]
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": {
     "production": [
