--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src"
   },
-  "include": ["src/**/*"]
+  "include": ["./src/**/*"],
+  "extends": "./tsconfig.paths.json"
 }
