--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,7 +10,7 @@
       "pages/*": ["./src/pages/*"],
       "store/*": ["./src/store/*"],
       "utils/*": ["./src/utils/*"],
-      "theme/*": ["./src/theme/*"],
+      "theme/*": ["./src/theme/*"]
     }
   }
 }
