--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -20,8 +21,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typeface-roboto": "^1.1.13",
-    "util": "^0.12.5",
-    "uuidv4": "^6.2.13",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
