--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typeface-roboto": "^1.1.13",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
