--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
@@ -20,7 +19,6 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "typeface-roboto": "^1.1.13",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
@@ -44,6 +42,19 @@
     "rules": {
       "react/react-in-jsx-scope": "off",
       "no-unused-vars": "off"
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {},
+        "node": {
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
+        }
+      }
     }
   },
   "browserslist": {
